# KaiRPC

./: .gitignore  CMakeLists.txt  README.md
common/: config.cc  config.h  config_reader.h  err_code.h  exception.h  high_availability.h  mutex.h  run_time.cc  run_time.h  util.cc  util.h
conf/: kairpc.xml  kairpc_client.xml  service_center.conf
docs/: architecture.md  protocol.md
net/: eventloop.cc  eventloop.h  fd_event.cc  fd_event.h  fd_event_group.cc  fd_event_group.h  iothread.cc  iothread.h  iothreadgroup.cc  iothreadgroup.h  timer.cc  timer.h  timer_event.cc  timer_event.h  wakeup_fd_event.cc  wakeup_fd_event.h
net/coder/: abstract_coder.h  abstract_protocol.h  string_coder.h  tinypb_coder.cc  tinypb_coder.h  tinypb_protocol.cc  tinypb_protocol.h
net/rpc/: README.md  msg_id_util.cc  msg_id_util.h  rpc_channel.cc  rpc_channel.h  rpc_closure.h  rpc_controller.cc  rpc_controller.h  rpc_dispatcher.cc  rpc_dispatcher.h  rpc_interface.cc  rpc_interface.h
net/service_discovery/: run_server_discovery.cc  run_time_service_discovery_interface.h  service_discovery.h  test_run_time_sd_interface.cc
net/tcp/: net_addr.cc  net_addr.h  tcp_acceptor.cc  tcp_acceptor.h  tcp_buffer.cc  tcp_buffer.h  tcp_client.cc  tcp_client.h  tcp_connection.cc  tcp_connection.h  tcp_server.cc  tcp_server.h
scripts/: build.sh
test/: CMakeLists.txt  order.pb.cc  order.pb.h  test_rpc_client.cc  test_rpc_server.cc  test_tinypb_coder.cc
